# tether

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  agents.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml  release-assets.yml  release-candidate.yml
agent/: .env.example  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/alembic/: env.py
agent/alembic/versions/: 25f0e9e77fed_add_session_adapter_field.py  b302da14a242_add_session_approval_mode.py  c4f1a2b3d8e9_add_session_working_branch.py  e57f25d5ec90_add_external_agent_fields.py
agent/scripts/: smoke_test_claude.py  smoke_test_claude_local.py  smoke_test_codex_sidecar.py  smoke_test_permissions.py  smoke_test_sidecar.py
agent/tests/: conftest.py  test_api.py  test_bridge_attachments.py  test_bridge_base.py  test_bridge_dedupe.py  test_bridge_media_io.py  test_bridge_retry.py  test_checkpoint.py  test_claude_local.py  test_claude_sdk_worker.py  test_claude_subprocess.py  test_cli.py  test_cli_client.py  test_codex_discovery.py  test_codex_sdk_sidecar.py  test_config.py  test_context.py  test_debug_attachments.py  test_discord_bridge.py  test_external_agent_api.py  test_external_agent_integration.py  test_external_sessions_api.py  test_external_sessions_codex.py  test_external_to_telegram.py  test_formatting.py  test_git.py  test_git_ops.py  test_http.py  test_image_io.py  test_init_wizard.py  test_maintenance.py  test_mcp_server.py  test_multi_adapter_sessions.py  test_opencode_sidecar.py  test_opencode_sidecar_manager.py  test_output_postprocess.py  test_pi_discovery.py  test_pi_runner.py  test_pr.py  test_reaction_shortcut_parser_contract.py  (+24 more)
agent/tether/: cli.py  cli_client.py  diff.py  git.py  git_ops.py  init_wizard.py  log_config.py  log_redaction.py  logging.py  main.py  maintenance.py  middleware.py  models.py  output_postprocess.py  platform_defaults.py  prompts.py  repo_registry.py  server_init.py  servers.py  session_titles.py  settings.py  sse.py  startup.py  store.py  templates.py  workspace.py
agent/tether/api/: __init__.py  dashboard.py  debug.py  directories.py  emit.py  external_sessions.py  git.py  health.py  router.py  runner_events.py  runner_registry.py  schemas.py  sessions.py  setup.py  spa.py  state.py  status.py
agent/tether/bridges/: attachments.py  base.py  debug_attachments.py  dedupe.py  glue.py  image_io.py  media_io.py  reaction_shortcuts.py  retry.py  rich_output.py  subscriber.py  thread_state.py  turn_accumulator.py
agent/tether/bridges/discord/: bot.py  pairing_state.py
agent/tether/bridges/slack/: __init__.py  bot.py
agent/tether/bridges/telegram/: __init__.py  bot.py  formatting.py  state.py
agent/tether/db/: __init__.py
agent/tether/discovery/: __init__.py  claude_code.py  codex_cli.py  codex_sessions.py  pi_sessions.py  running.py
agent/tether/mcp_server/: server.py  tools.py
agent/tether/runner/: __init__.py  api_runner_base.py  base.py  claude.py  claude_api.py  claude_local.py  claude_subprocess.py  codex_cli.py  codex_sdk_sidecar.py  litellm_runner.py  opencode_sdk_sidecar.py  opencode_sidecar_manager.py  opencode_subprocess.py  pi_rpc.py  sidecar.py
agent/tether/sidecars/: __init__.py
agent/tether/tools/: executor.py
bridges/telegram/: Dockerfile  README.md  config.py  main.py  pyproject.toml  sse_client.py  telegram_bot.py
bridges/telegram/src/tether/: __init__.py
bridges/telegram/src/tether/bridges/: __init__.py
bridges/telegram/src/tether/bridges/telegram/: __init__.py  config.py  main.py  sse_client.py  state.py  telegram_bot.py
codex-sdk-sidecar/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
codex-sdk-sidecar/src/: codex.test.ts  codex.ts  index.ts  logger.ts  routes.ts  runTurn.test.ts  runTurnTimeout.test.ts  session.ts  settings.ts  types.ts  workdir.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  ATTACHMENT_PUBLISH_AND_STOP_FOOTER_DEVPLAN.md  BRIDGES.md  CHECKMARK_REACTION_SHORTCUT_DEVPLAN.md  CODE_STANDARDS.md  DATA_MODEL.md  MCP_SERVER.md  RUNNERS.md  SERVER_MODE.md  SESSION_ENGINE.md  WEB_UI.md
docs/internal/: 2026-04-08-stability-component-extraction.md  2026-04-10-systemd-runbook.md  2026-05-30-openclaw-bridge-strengthening.md
opencode-sdk-sidecar/: package.json
opencode-sdk-sidecar/src/: index.ts  logger.ts  opencode.test.ts  opencode.ts  routes.ts  runTurn.test.ts  runTurnTimeout.test.ts  session.ts  settings.ts
scripts/: build-sidecars.sh  build_rc_assets.py  build_release_assets.py  deploy-dev.sh  run-systemd.sh  set_release_version.py  start-codex-local.sh  start-opencode-local.sh  verify.sh
sidecar-common/: package.json
sidecar-common/src/: logger.ts  routes.test.ts  routes.ts  server.test.ts  server.ts  session.test.ts  session.ts  types.ts  workdir.test.ts  workdir.ts
ui/: components.json  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
ui/dev-dist/: sw.js
ui/src/: App.vue  api.ts  generated.css  index.css  main.ts  state.ts
ui/src/lib/: markdown.ts
(+32 files in other folders)
