[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tether-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn==0.27.1",
  "pydantic==2.7.4",
  "structlog==24.4.0",
  "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "httpx==0.27.0",
  "pytest==8.2.2",
  "anyio[trio]>=4.0.0",
  "pytest-anyio>=0.0.0",
]

[tool.setuptools.packages.find]
include = ["tether*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]
