[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tether-ai"
version = "0.1.0"
description = "Control your AI coding agents from your phone when you're away from your desk"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Lars de Ridder", email = "lars@xithing.io" },
]
maintainers = [
  { name = "Lars de Ridder", email = "lars@xithing.io" },
]
keywords = [
  "ai",
  "agent",
  "claude",
  "codex",
  "remote",
  "mobile",
  "coding-assistant",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "fastapi==0.110.0",
  "uvicorn==0.27.1",
  "pydantic==2.7.4",
  "structlog==24.4.0",
  "payload-redactor>=0.3.0",
  "anthropic>=0.39.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "httpx==0.27.0",
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "anyio[trio]>=4.0.0",
  "pytest-anyio>=0.0.0",
]
telegram = [
  "python-telegram-bot>=20.0",
]
slack = [
  "slack-sdk>=3.27.0",
]
discord = [
  "discord.py>=2.3.0",
]
litellm = [
  "litellm>=1.0",
]
mcp = [
  "mcp>=0.1.0",
]

[project.urls]
Homepage = "https://gettether.dev"
Documentation = "https://github.com/larsderidder/tether#readme"
Repository = "https://github.com/larsderidder/tether"
Issues = "https://github.com/larsderidder/tether/issues"
Changelog = "https://github.com/larsderidder/tether/releases"

[project.scripts]
tether = "tether.cli:main"
tether-agent = "tether.cli:_start_compat"
tether-mcp = "tether.mcp_server.server:main"

[tool.setuptools.packages.find]
include = ["tether*"]

[tool.setuptools.package-data]
tether = ["static_ui/**/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["tether"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py310"]
