[project]
name = "tether-telegram-bridge"
version = "0.1.0"
description = "Telegram bridge for Tether agent"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9.0",
  "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "watchdog>=4.0.0",
]

[project.scripts]
tether-telegram = "bridges.telegram.main:run"
